Fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,26 @@ body {
     flex-direction: column;
 }
 
+#title {
+    font-size: 5rem;
+    font-family: Calibri;
+}
+
+#label {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+#ask {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
 #ball {
     width: 20rem;
     height: 20rem;
+}
+
+#footer {
+    margin-top: 8rem;
 }
